@@ -38,6 +38,12 @@ Commons Collections is Java 5.
 Users are encouraged to upgrade to this version as, in addition to new
 features, this release includes numerous bug fixes.
   ">
+    <action issue="COLLECTIONS-502" dev="tn" type="update">
+      Resolved generic parameter inconsistency for various static fields, e.g. BagUtils.EMPTY_BAG,
+      TruePredicate.INSTANCE and many others. All accessible static fields use raw types so that
+      they can be used directly without explicit casting. To avoid compiler warnings about unchecked
+      conversion and/or rawtypes use the corresponding factory methods, e.g. BagUtils.emptyBag(). 
+    </action>
     <action issue="COLLECTIONS-501" dev="tn" type="update">
       Renamed methods "V MultiKeyMap#remove(Object, Object, ...)" to
       "V MultiKeyMap#removeMultiKey(Object, Object, ...)" to avoid future conflicts
