@@ -49,6 +49,10 @@ Major changes since 3.2.1
 Changes since 4.0-alpha1
 ------------------------
 
+ o [COLLECTIONS-502] Resolved generic parameter inconsistency for various static fields, e.g. BagUtils.EMPTY_BAG,
+                     TruePredicate.INSTANCE and many others. All accessible static fields use raw types so that
+                     they can be used directly without explicit casting. To avoid compiler warnings about unchecked
+                     conversion and/or rawtypes use the corresponding factory methods, e.g. BagUtils.emptyBag(). 
  o [COLLECTIONS-501] Renamed methods "V MultiKeyMap#remove(Object, Object, ...)" to
                      "V MultiKeyMap#removeMultiKey(Object, Object, ...)" to avoid future conflicts
                      with a default method of the Map interface in Java 8.
@@ -178,6 +182,10 @@ New features
 Changed classes / methods
 -------------------------
 
+ o [COLLECTIONS-502] Resolved generic parameter inconsistency for various static fields, e.g. BagUtils.EMPTY_BAG,
+                     TruePredicate.INSTANCE and many others. All accessible static fields use raw types so that
+                     they can be used directly without explicit casting. To avoid compiler warnings about unchecked
+                     conversion and/or rawtypes use the corresponding factory methods, e.g. BagUtils.emptyBag(). 
  o [COLLECTIONS-501] Renamed methods "V MultiKeyMap#remove(Object, Object, ...)" to
                      "V MultiKeyMap#removeMultiKey(Object, Object, ...)" to avoid future conflicts
                      with a default method of the Map interface in Java 8.
